--- a/_config.yml
+++ b/_config.yml
@@ -15,10 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Banzo of Madison
 email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+description: Our made-from-scratch menu is based on traditional Mediterranean recipes, with our own signature Banzo touch.  Our focus is on high quality ingredients, which often come from local sources.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://www.banzomadison.com/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: banzomadison
