--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Banzo of Madison
+title: Banzo LLC.
 email: your-email@example.com
 description: Our made-from-scratch menu is based on traditional Mediterranean recipes, with our own signature Banzo touch.  Our focus is on high quality ingredients, which often come from local sources.
 baseurl: "" # the subpath of your site, e.g. /blog
